--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <script src="js/resources.js"></script>
     <script src="js/buttons.js"></script>
+    <SCRIPT src="js/mainscreen.js"></SCRIPT>
     <script src="js/app.js"></script>
     <script src="js/popups.js"></script>
     <script src="js/engine.js"></script>
