--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <script src="js/data.js"></script>
     <script src="js/resources.js"></script>
     <script src="js/buttons.js"></script>
     <SCRIPT src="js/mainscreen.js"></SCRIPT>
